{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 158,
  "lineage": "cdac8d47-1b7f-a507-f512-372e573cfd63",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internetgateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593856011819:internet-gateway/igw-0f40323f68f023b74",
            "id": "igw-0f40323f68f023b74",
            "owner_id": "593856011819",
            "vpc_id": "vpc-0d877b64c75eabb5c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f40323f68f023b74",
            "id": "r-rtb-04edda4ea127a22601080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04edda4ea127a2260",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.internetgateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "accessgroups",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593856011819:security-group/sg-04ce884b68d772c04",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04ce884b68d772c04",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "allowinbound",
            "name_prefix": "",
            "owner_id": "593856011819",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ECS-Access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d877b64c75eabb5c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593856011819:subnet/subnet-06d9b7535e5f8da1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "132.0.0.0/24",
            "id": "subnet-06d9b7535e5f8da1b",
            "map_public_ip_on_launch": true,
            "owner_id": "593856011819",
            "tags": {
              "Name": "My Subnet"
            },
            "vpc_id": "vpc-0d877b64c75eabb5c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593856011819:subnet/subnet-08febb9eb8b8bc0ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "132.0.1.0/24",
            "id": "subnet-08febb9eb8b8bc0ff",
            "map_public_ip_on_launch": true,
            "owner_id": "593856011819",
            "tags": {
              "Name": "My Subnet"
            },
            "vpc_id": "vpc-0d877b64c75eabb5c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593856011819:vpc/vpc-0d877b64c75eabb5c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "132.0.0.0/16",
            "default_network_acl_id": "acl-008bfc2ad73e3ba04",
            "default_route_table_id": "rtb-04edda4ea127a2260",
            "default_security_group_id": "sg-0a9b60973c77834d9",
            "dhcp_options_id": "dopt-0f2542e338eea22b3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d877b64c75eabb5c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04edda4ea127a2260",
            "owner_id": "593856011819",
            "tags": {
              "Name": "My VPC"
            }
          }
        }
      ]
    }
  ]
}